--- a/sass/landingpage.scss
+++ b/sass/landingpage.scss
@@ -13,6 +13,7 @@
   font-family: arial;
   text-decoration: none;
   margin: 1rem;
+  overflow: hidden;
 }
 
 .price {
